# data-analysis-portfolio

./: .gitignore  LICENSE  README.md
docs/: roadmap.md
projects/03-report-qa-agent/: .gitignore  README.md  pyproject.toml
projects/03-report-qa-agent/examples/: customer_success_memo.txt  evaluation_questions.json  sample_board_report.md
projects/03-report-qa-agent/src/report_qa/: __init__.py  answer.py  cli.py  evaluation.py  ingest.py  models.py  retrieval.py
projects/03-report-qa-agent/tests/: test_report_qa.py
projects/nl2sql-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
projects/nl2sql-agent/examples/: README.md
projects/nl2sql-agent/src/: __init__.py  config.py  offline_demo.py  sample_data.py
projects/nl2sql-agent/src/executor/: __init__.py  insights.py  runner.py
projects/nl2sql-agent/src/generator/: __init__.py  dialect.py  prompt_builder.py  sql_generator.py  validators.py
projects/nl2sql-agent/src/schema/: __init__.py  cache.py  inspector.py  models.py
projects/nl2sql-agent/tests/: test_executor_runner.py  test_offline_demo.py  test_package_import.py  test_result_insights.py  test_sample_data.py  test_schema_models.py  test_sql_generator.py
